cmake_minimum_required(VERSION 3.13)
project(qc)

set(CMAKE_CXX_STANDARD 14)
add_subdirectory(lib/rax/)
add_subdirectory(src/algorithm/)
add_subdirectory(src/pcre/)
add_subdirectory(src/core)
include_directories(lib/rax)
include_directories(src/algorithm)
include_directories(src/pcre)
add_executable(qc src/main.c)
target_link_libraries(qc rax stl)

add_executable(test-rax test/test-rax.c)
add_executable(test-regex test/test-regex.c)
add_executable(test-command-line test/test-command-line.c)
add_executable(test-socket-server test/test-socket-server.c)
add_executable(test-socket-client test/test-socket-client.c test/test_header.h)
add_executable(test-net-func test/test-net-func.c)
add_executable(test-event test/test-event.c)
target_link_libraries(test-rax rax)
target_link_libraries(test-regex pcre regex)
target_link_libraries(test-command-line core)
target_link_libraries(test-net-func core stl)
target_link_libraries(test-socket-server core)

target_link_libraries(test-event core stl)

SET(CMAKE_INSTALL_PREFIX ./bin)
install(TARGETS test-event DESTINATION bin)

